Vertical scrollbar removed snd fixed some responsiveness related issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 
 body {
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 :root {
